console: Fix spacing and and sizes

--- a/pkg/webui/components/navigation/side-v2/list/list.styl
+++ b/pkg/webui/components/navigation/side-v2/list/list.styl
@@ -17,7 +17,7 @@
   padding: 0
   margin: 0
   overflow: hidden
-  font-size: $fs.s
+  font-size: $fs.m
 
   & > li:not(:last-child)
     margin-bottom: 0
