--- a/pkg/webui/components/search-button/search-button.styl
+++ b/pkg/webui/components/search-button/search-button.styl
@@ -19,9 +19,6 @@
   position: relative
   display: flex
   justify-content: space-between
-  border-radius: $br.l
-  border: 1px solid #E6E6E6
-  box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.06)
   padding: $cs.xs $cs.xxs
   gap: $cs.xxs
 
@@ -41,9 +38,6 @@
     border-radius: $br.m
     border: 1px solid $c.grey-200
     font-size: $fs.s
-
-    p
-      line-height: 1
-
-    .backslash
-      margin: 3px 0 0
+    display: flex
+    justify-content: center
+    align-items: center
