--- a/pkg/webui/components/side-footer/side-footer.styl
+++ b/pkg/webui/components/side-footer/side-footer.styl
@@ -13,20 +13,15 @@
 // limitations under the License.
 
 .side-footer
-  bottom: 15px
-  position: absolute
+  &-full-width
+    width: 100%
 
   &-button
     justify-content: space-between
-    width: 100%
+    padding: 0 $cs.m !important
+
+  &-support-dropdown
+    right: -79px !important
 
   &-dropdown
-    width: 15.5rem
-
-  &-hover-dropdown
-    right: -80px !important
-    width: 15.5rem
-    margin-top: -7rem !important
-
-    &-minimized
-      right: -200px !important
+    width: 18rem
