--- a/pkg/webui/containers/side-bar/side-bar.styl
+++ b/pkg/webui/containers/side-bar/side-bar.styl
@@ -15,10 +15,9 @@
 .sidebar
   border-normal(right)
   line-height: 1
-  font-size: $fs.xs
+  font-size: $fs.s
   height: 97.5vh
-  min-width: 17rem
-  max-width: 24rem
+  min-width: 19.8rem
   +media-query($bp.m)
     sidebar-transition(left, box-shadow)
     top: $header-height-mobile
